# omp-solvers

./: .gitmodules  CMakeLists.txt
include/: solvers.hpp
src/: solvers.cpp
